@@ -24,6 +24,11 @@ import org.eclipse.jface.viewers.ColumnViewer;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.jface.viewers.TextCellEditor;
 
+/**
+ * Provides support for editing double values within a table.
+ * 
+ * @param <TRow> the row type
+ */
 public abstract class DoubleEditingSupport<TRow> extends GenericEditingSupport<TRow, Double> {
 
 	protected CellEditor editor;
@@ -40,7 +45,7 @@ public abstract class DoubleEditingSupport<TRow> extends GenericEditingSupport<T
 			protected void doSetValue(final Object value) {
 				if (value == null) {
 					// If value is null set to zero instead
-					super.doSetValue(String.valueOf(new Double(0)));
+					super.doSetValue(String.valueOf(Double.valueOf(0)));
 				} else {
 					super.doSetValue(String.valueOf(value.toString()));
 				}
